# sprc

tema1/: CMakeLists.txt  Makefile  README  client  client.cpp  file.txt  load.h  load.x  load_clnt.c  load_svc.c  load_xdr.c  server  server.cpp
tema1/lab2/: load.h  load.x  load_clnt.c  load_svc.c  load_xdr.c  makefile  rpc_client.c  rpc_server.c
tema2/: README  application.yaml
tema2/Admin/: Dockerfile  main.py
tema2/AirplaneService/: Dockerfile  app.py
tema2/Client/: main.py
tema2/database/: init.sql
tema3/: .gitignore  README.md  cleanup.sh  first_run.sh  influxdb.conf  run.sh  stack.yaml  stack.yml  zip_it.sh
tema3/actual_volumes/grafana/: grafana.db
tema3/adapter/: Dockerfile  adapter.py  requirements.txt  test_client.py
tema3/fake_sensors/: Dockerfile  fake_sensors.py
tema3/volumes/grafana/: grafana.db
